# svg-simple-parser

./: Cargo.toml  README.md
benches/: main.rs
examples/: parse.rs  stringify.rs
src/: ast.rs  lib.rs  parse.rs  stringify.rs
tests/: parse.rs  stringify.rs
